--- a/index.html
+++ b/index.html
@@ -1,59 +1,60 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Global Insights | Latest Updates</title>
+    <title>AI News & Video Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; background-color: #f8fafc; }
-        .news-card { transition: transform 0.2s; }
-        .news-card:hover { transform: translateY(-5px); }
-    </style>
 </head>
-<body class="p-4 md:p-8">
-    <header class="max-w-5xl mx-auto text-center mb-12">
-        <h1 class="text-4xl font-bold text-slate-900 mb-2">AI Global Insights</h1>
-        <p class="text-slate-600 font-medium">Your Daily Dose of Artificial Intelligence News</p>
-        <div class="h-1 w-20 bg-blue-600 mx-auto mt-4 rounded-full"></div>
-    </header>
-
-    <main id="news-container" class="max-w-5xl mx-auto grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-        <div class="col-span-full text-center py-20 text-slate-400">
-            <p class="animate-pulse">Fetching latest AI breakthroughs...</p>
+<body class="bg-gray-900 text-white font-sans">
+    <div class="container mx-auto p-4">
+        <h1 class="text-3xl font-bold text-center mb-6 text-blue-400">AI Global Insights & Trends</h1>
+        
+        <div class="mb-10">
+            <h2 class="text-xl mb-4 border-b border-blue-500 pb-2">Latest AI Video / Song</h2>
+            <div class="aspect-video w-full max-w-3xl mx-auto">
+                <iframe id="youtube-player" class="w-full h-full rounded-lg shadow-lg" 
+                    src="https://www.youtube.com/embed/zt0JA5rxdfM" frameborder="0" allowfullscreen>
+                </iframe>
+            </div>
         </div>
-    </main>
+
+        <div>
+            <h2 class="text-xl mb-4 border-b border-green-500 pb-2">Latest AI News</h2>
+            <div id="news-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <p class="text-gray-400 italic">Updating news from robot...</p>
+            </div>
+        </div>
+    </div>
 
     <script>
-        async function loadNews() {
+        async function loadData() {
             try {
-                const response = await fetch('news.json');
-                const news = await response.json();
+                const response = await fetch('./news.json');
+                const data = await response.json();
                 const container = document.getElementById('news-container');
                 container.innerHTML = '';
+                
+                // Agar news.json khali ho toh ye dikhega
+                if (data.length === 0) {
+                    container.innerHTML = '<p class="text-yellow-500">Robot news dhoond raha hai, thodi der baad refresh karein.</p>';
+                    return;
+                }
 
-                news.forEach(item => {
-                    const card = `
-                        <div class="news-card bg-white rounded-xl shadow-sm border border-slate-100 overflow-hidden flex flex-col">
-                            <div class="p-6 flex-grow">
-                                <span class="text-xs font-bold text-blue-600 uppercase tracking-wider">Latest Update</span>
-                                <h2 class="text-xl font-bold text-slate-800 mt-2 mb-3 leading-tight">${item.title}</h2>
-                                <p class="text-slate-600 text-sm line-clamp-3">${item.summary || 'Click below to read the full story on this AI development.'}</p>
-                            </div>
-                            <div class="px-6 pb-6 mt-auto">
-                                <a href="${item.link}" target="_blank" class="block text-center bg-slate-900 text-white py-2 rounded-lg font-semibold hover:bg-blue-600 transition-colors">Read Full Article</a>
-                            </div>
+                data.forEach(item => {
+                    container.innerHTML += `
+                        <div class="bg-gray-800 p-4 rounded-lg border border-gray-700 hover:border-blue-500 transition">
+                            <h3 class="font-bold text-lg mb-2 text-blue-300">${item.title}</h3>
+                            <p class="text-sm text-gray-400 mb-4">${item.description}</p>
+                            <a href="${item.url}" target="_blank" class="text-blue-400 hover:underline">Read More</a>
                         </div>
                     `;
-                    container.innerHTML += card;
                 });
             } catch (e) {
-                console.error("News not loaded yet.");
+                console.log("Data not ready yet.");
             }
         }
-        loadNews();
+        loadData();
     </script>
 </body>
 </html>
