--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="news-section">
-        <h3>Latest Updates</h3>
+        src="https://www.youtube.com/embed/YykjpeuMNEk"
         <div id="news-container">
             <p style="color: yellow;">Loading Bollywood & Movie updates...</p>
         </div>
