--- a/index.html
+++ b/index.html
@@ -5,34 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bollywood & World Movies Portal</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #0d1b2a; color: white; text-align: center; padding: 20px; }
-        h1 { color: #4a90e2; }
-        .video-container { margin: 20px auto; max-width: 800px; border: 2px solid #4a90e2; border-radius: 10px; overflow: hidden; }
-        .news-section { margin-top: 30px; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto; }
-        .card { background: #1b263b; padding: 15px; margin-bottom: 10px; border-radius: 8px; border-left: 5px solid #00ff88; }
-        a { color: #00ff88; text-decoration: none; font-weight: bold; }
+        body { font-family: 'Segoe UI', Arial, sans-serif; background-color: #0d1b2a; color: white; text-align: center; padding: 20px; margin: 0; }
+        .header { background: linear-gradient(90deg, #1b263b, #415a77); padding: 20px; border-radius: 0 0 20px 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.5); }
+        h1 { margin: 0; color: #e0e1dd; text-transform: uppercase; letter-spacing: 2px; }
+        .video-container { margin: 30px auto; max-width: 850px; border: 4px solid #778da9; border-radius: 15px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.7); }
+        .content-section { max-width: 850px; margin: 40px auto; text-align: left; padding: 0 15px; }
+        h2 { border-bottom: 2px solid #778da9; padding-bottom: 10px; color: #00b4d8; }
+        .card { background: #1b263b; padding: 20px; margin-bottom: 15px; border-radius: 12px; border-left: 6px solid #00b4d8; transition: 0.3s; }
+        .card:hover { transform: scale(1.02); background: #415a77; }
+        .card h4 { margin: 0 0 10px 0; color: #caf0f8; font-size: 1.2rem; }
+        .card p { margin: 0 0 15px 0; color: #e0e1dd; line-height: 1.5; }
+        .btn { display: inline-block; background: #00b4d8; color: white; padding: 8px 20px; border-radius: 20px; text-decoration: none; font-weight: bold; }
+        .footer { margin-top: 50px; padding: 20px; font-size: 0.9rem; color: #778da9; }
     </style>
 </head>
 <body>
 
-    <h1>Bollywood & World Movies Portal</h1>
-    
-    <div class="news-section">
-        <h3>Latest Video / Song</h3>
-        <div class="video-container">
-            <iframe width="100%" height="400" src="https://www.youtube.com/embed/videoseries?list=PL64G6j8eWnwzY8v_vV9A3Y_V7S9Y7V8Y8" frameborder="0" allowfullscreen></iframe>
+    <div class="header">
+        <h1>Bollywood & World Movies</h1>
+        <p>Latest Songs, Trailers & Updates</p>
+    </div>
+
+    <div class="video-container">
+        <iframe width="100%" height="480" src="https://www.youtube.com/embed/YykjpeuMNEk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="content-section">
+        <h2>🔥 Trending Updates</h2>
+        <div id="news-container">
+            <p style="text-align: center; color: #778da9;">Updating latest Bollywood & Movie data...</p>
         </div>
     </div>
 
-    <div class="news-section">
-        src="https://www.youtube.com/embed/YykjpeuMNEk"
-        <div id="news-container">
-            <p style="color: yellow;">Loading Bollywood & Movie updates...</p>
-        </div>
+    <div class="footer">
+        © 2026 Movie Portal | Powered by AI Robot
     </div>
 
     <script>
-        // Robot wali news file ko load karna
+        // Robot ki fetch ki hui news dikhane ke liye
         fetch('news.json')
             .then(response => response.json())
             .then(data => {
@@ -43,13 +53,13 @@
                         <div class="card">
                             <h4>${item.title}</h4>
                             <p>${item.content}</p>
-                            <a href="${item.link}" target="_blank">Watch Now</a>
+                            <a href="${item.link}" target="_blank" class="btn">Watch Now</a>
                         </div>
                     `;
                 });
             })
             .catch(err => {
-                document.getElementById('news-container').innerHTML = '<p>Robot updates dhoond raha hai...</p>';
+                document.getElementById('news-container').innerHTML = '<p style="text-align: center;">Robot data dhoond raha hai... Refresh karein!</p>';
             });
     </script>
 </body>
