--- a/index.html
+++ b/index.html
@@ -5,73 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body { background: #05070a; color: #fff; font-family: sans-serif; margin: 0; text-align: center; }
-        .header { background: #e50914; padding: 20px; font-size: 28px; font-weight: bold; border-bottom: 4px solid #b20710; }
-        .stats { background: #111; padding: 10px; font-size: 14px; color: #ffcc00; }
-        .movie-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 12px; padding: 15px; }
-        .card { background: #161b22; border-radius: 10px; overflow: hidden; border: 1px solid #333; transition: 0.2s; }
-        .card:hover { transform: scale(1.03); border-color: #e50914; }
-        .card img { width: 100%; height: 190px; object-fit: cover; opacity: 0.8; }
-        .title { padding: 8px; font-size: 12px; font-weight: bold; height: 35px; overflow: hidden; color: #eee; }
-        .dl-btn { background: #e50914; color: #fff; text-decoration: none; display: block; padding: 10px; font-weight: bold; font-size: 11px; }
-        
-        .pagination { margin: 40px 0; padding: 20px; display: flex; justify-content: center; align-items: center; gap: 15px; background: #111; }
-        .page-btn { background: #333; color: white; border: none; padding: 12px 20px; border-radius: 5px; cursor: pointer; font-weight: bold; }
-        .page-btn:hover { background: #e50914; }
-        .page-info { font-size: 18px; font-weight: bold; color: #ffcc00; }
+        .header { background: #e50914; padding: 20px; font-size: 28px; font-weight: bold; }
+        .search-area { background: #111; padding: 20px; border-bottom: 2px solid #333; }
+        input { width: 80%; padding: 15px; border-radius: 25px; border: none; font-size: 16px; outline: none; background: #222; color: #fff; }
+        .movie-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 12px; padding: 15px; min-height: 400px; }
+        .card { background: #161b22; border-radius: 10px; overflow: hidden; border: 1px solid #333; }
+        .card img { width: 100%; height: 180px; object-fit: cover; }
+        .title { padding: 8px; font-size: 12px; font-weight: bold; height: 35px; overflow: hidden; }
+        .dl-btn { background: #e50914; color: #fff; text-decoration: none; display: block; padding: 10px; font-weight: bold; }
+        .pagination { padding: 20px; background: #111; display: flex; justify-content: center; gap: 10px; align-items: center; }
+        .page-btn { background: #333; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
 
-<div class="header">FILMY-AI UNLIMITED</div>
-<div class="stats">🔥 Database: 10,000+ Movies | High Speed Servers</div>
+<div class="header">FILMY-AI PRO</div>
 
-<div class="movie-grid" id="grid">Loading Database...</div>
+<div class="search-area">
+    <input type="text" id="searchInput" onkeyup="searchMovies()" placeholder="Search from 10,000+ Movies...">
+</div>
+
+<div id="status" style="color: yellow; padding: 10px;">Robot data load kar raha hai...</div>
+
+<div class="movie-grid" id="grid"></div>
 
 <div class="pagination">
     <button class="page-btn" onclick="changePage(-1)">← PREV</button>
-    <span class="page-info" id="pageNumber">Page 1</span>
+    <span id="pageInfo">Page 1</span>
     <button class="page-btn" onclick="changePage(1)">NEXT →</button>
 </div>
 
 <script>
-    let allMovies = [];
-    let currentPage = 1;
-    const itemsPerPage = 20;
+    let movies = [];
+    let page = 1;
+    const perPage = 20;
 
-    function render() {
+    function searchMovies() {
+        let q = document.getElementById('searchInput').value.toLowerCase();
+        let filtered = movies.filter(m => m.title.toLowerCase().includes(q));
+        render(filtered.slice(0, 20));
+    }
+
+    function render(list) {
         const grid = document.getElementById('grid');
-        grid.innerHTML = '';
-        
-        let start = (currentPage - 1) * itemsPerPage;
-        let end = start + itemsPerPage;
-        let currentItems = allMovies.slice(start, end);
-
-        currentItems.forEach(m => {
-            grid.innerHTML += `
-                <div class="card">
-                    <img src="${m.img}" alt="Poster">
-                    <div class="title">${m.title}</div>
-                    <a href="${m.link}" target="_blank" class="dl-btn">DOWNLOAD (HD)</a>
-                </div>
-            `;
-        });
-
-        document.getElementById('pageNumber').innerText = `Page ${currentPage} of ${Math.ceil(allMovies.length / itemsPerPage)}`;
-        window.scrollTo(0,0);
+        grid.innerHTML = list.map(m => `
+            <div class="card">
+                <img src="${m.img}" onerror="this.src='https://via.placeholder.com/150x200?text=Movie'">
+                <div class="title">${m.title}</div>
+                <a href="${m.link}" target="_blank" class="dl-btn">DOWNLOAD</a>
+            </div>
+        `).join('');
     }
 
     function changePage(s) {
-        if ((currentPage + s) > 0 && (currentPage + s) <= Math.ceil(allMovies.length / itemsPerPage)) {
-            currentPage += s;
-            render();
-        }
+        page += s;
+        if(page < 1) page = 1;
+        document.getElementById('pageInfo').innerText = "Page " + page;
+        render(movies.slice((page-1)*perPage, page*perPage));
+        window.scrollTo(0,0);
     }
 
-    fetch('news.json').then(r => r.json()).then(data => {
-        allMovies = data.news_items;
-        render();
-    });
+    fetch('news.json')
+        .then(r => r.json())
+        .then(data => {
+            movies = data.news_items;
+            document.getElementById('status').innerText = "🔥 10,000+ Movies Ready!";
+            render(movies.slice(0, perPage));
+        })
+        .catch(err => {
+            document.getElementById('status').innerText = "❌ Error: Robot ko data nahi mila.";
+        });
 </script>
-
 </body>
 </html>
