--- a/index.html
+++ b/index.html
@@ -1,80 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Filmy-AI Unlimited | 10,000+ Movies</title>
+    <title>FILMY-AI PRO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        body { background: #05070a; color: #fff; font-family: sans-serif; margin: 0; text-align: center; }
-        .header { background: #e50914; padding: 20px; font-size: 28px; font-weight: bold; }
-        .search-area { background: #111; padding: 20px; border-bottom: 2px solid #333; }
-        input { width: 80%; padding: 15px; border-radius: 25px; border: none; font-size: 16px; outline: none; background: #222; color: #fff; }
-        .movie-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 12px; padding: 15px; min-height: 400px; }
-        .card { background: #161b22; border-radius: 10px; overflow: hidden; border: 1px solid #333; }
+        body { background: #000; color: white; font-family: sans-serif; margin: 0; text-align: center; }
+        .header { background: #e50914; padding: 20px; font-size: 24px; font-weight: bold; }
+        .search-box { padding: 20px; background: #111; }
+        input { width: 85%; padding: 12px; border-radius: 20px; border: none; background: #222; color: #fff; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 10px; padding: 15px; }
+        .card { background: #1a1a1a; border-radius: 8px; border-bottom: 3px solid #e50914; overflow: hidden; }
         .card img { width: 100%; height: 180px; object-fit: cover; }
-        .title { padding: 8px; font-size: 12px; font-weight: bold; height: 35px; overflow: hidden; }
-        .dl-btn { background: #e50914; color: #fff; text-decoration: none; display: block; padding: 10px; font-weight: bold; }
-        .pagination { padding: 20px; background: #111; display: flex; justify-content: center; gap: 10px; align-items: center; }
-        .page-btn { background: #333; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; }
+        .dl-btn { background: #ffcc00; color: #000; display: block; padding: 10px; text-decoration: none; font-weight: bold; font-size: 12px; }
     </style>
 </head>
 <body>
+    <div class="header">FILMY-AI PRO PORTAL</div>
+    <div class="search-box">
+        <input type="text" id="srch" onkeyup="doSearch()" placeholder="Search Movie...">
+    </div>
+    <div id="loader" style="padding: 20px; color: yellow;">Movies dhoond raha hoon...</div>
+    <div class="grid" id="grid"></div>
 
-<div class="header">FILMY-AI PRO</div>
-
-<div class="search-area">
-    <input type="text" id="searchInput" onkeyup="searchMovies()" placeholder="Search from 10,000+ Movies...">
-</div>
-
-<div id="status" style="color: yellow; padding: 10px;">Robot data load kar raha hai...</div>
-
-<div class="movie-grid" id="grid"></div>
-
-<div class="pagination">
-    <button class="page-btn" onclick="changePage(-1)">← PREV</button>
-    <span id="pageInfo">Page 1</span>
-    <button class="page-btn" onclick="changePage(1)">NEXT →</button>
-</div>
-
-<script>
-    let movies = [];
-    let page = 1;
-    const perPage = 20;
-
-    function searchMovies() {
-        let q = document.getElementById('searchInput').value.toLowerCase();
-        let filtered = movies.filter(m => m.title.toLowerCase().includes(q));
-        render(filtered.slice(0, 20));
-    }
-
-    function render(list) {
-        const grid = document.getElementById('grid');
-        grid.innerHTML = list.map(m => `
-            <div class="card">
-                <img src="${m.img}" onerror="this.src='https://via.placeholder.com/150x200?text=Movie'">
-                <div class="title">${m.title}</div>
-                <a href="${m.link}" target="_blank" class="dl-btn">DOWNLOAD</a>
-            </div>
-        `).join('');
-    }
-
-    function changePage(s) {
-        page += s;
-        if(page < 1) page = 1;
-        document.getElementById('pageInfo').innerText = "Page " + page;
-        render(movies.slice((page-1)*perPage, page*perPage));
-        window.scrollTo(0,0);
-    }
-
-    fetch('news.json')
-        .then(r => r.json())
-        .then(data => {
-            movies = data.news_items;
-            document.getElementById('status').innerText = "🔥 10,000+ Movies Ready!";
-            render(movies.slice(0, perPage));
-        })
-        .catch(err => {
-            document.getElementById('status').innerText = "❌ Error: Robot ko data nahi mila.";
+    <script>
+        let db = [];
+        function doSearch() {
+            let q = document.getElementById('srch').value.toLowerCase();
+            let filtered = db.filter(m => m.title.toLowerCase().includes(q));
+            show(filtered.slice(0, 20));
+        }
+        function show(list) {
+            document.getElementById('grid').innerHTML = list.map(m => `
+                <div class="card">
+                    <img src="${m.img}">
+                    <div style="padding:5px; font-size:11px;">${m.title}</div>
+                    <a href="${m.link}" class="dl-btn">DOWNLOAD</a>
+                </div>
+            `).join('');
+        }
+        fetch('news.json').then(r => r.json()).then(data => {
+            db = data.news_items;
+            document.getElementById('loader').style.display = 'none';
+            show(db.slice(0, 40));
+        }).catch(() => {
+            document.getElementById('loader').innerHTML = "❌ Error: Robot ko refresh karein.";
         });
-</script>
+    </script>
 </body>
 </html>
