--- a/index.html
+++ b/index.html
@@ -1,50 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>FILMY-AI PRO</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Filmy-AI Pro Portal</title>
     <style>
-        body { background: #000; color: white; font-family: sans-serif; margin: 0; text-align: center; }
-        .header { background: #e50914; padding: 20px; font-size: 24px; font-weight: bold; }
-        .search-box { padding: 20px; background: #111; }
-        input { width: 85%; padding: 12px; border-radius: 20px; border: none; background: #222; color: #fff; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 10px; padding: 15px; }
-        .card { background: #1a1a1a; border-radius: 8px; border-bottom: 3px solid #e50914; overflow: hidden; }
-        .card img { width: 100%; height: 180px; object-fit: cover; }
-        .dl-btn { background: #ffcc00; color: #000; display: block; padding: 10px; text-decoration: none; font-weight: bold; font-size: 12px; }
+        :root { --main: #e50914; --bg: #0b0f16; }
+        body { background: var(--bg); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; }
+        .header { background: var(--main); padding: 20px; text-align: center; font-size: 24px; font-weight: bold; }
+        .search-section { padding: 20px; background: #141a24; position: sticky; top: 0; z-index: 100; }
+        input { width: 90%; padding: 15px; border-radius: 30px; border: none; background: #222; color: #fff; font-size: 16px; outline: 2px solid #333; }
+        input:focus { outline-color: var(--main); }
+        .movie-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 15px; padding: 20px; }
+        .card { background: #1c2531; border-radius: 12px; overflow: hidden; border-bottom: 4px solid var(--main); transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); }
+        .card img { width: 100%; height: 230px; object-fit: cover; }
+        .card-body { padding: 10px; }
+        .m-title { font-size: 13px; font-weight: bold; margin-bottom: 10px; height: 36px; overflow: hidden; }
+        .dl-btn { background: var(--main); color: white; text-decoration: none; display: block; padding: 10px; border-radius: 5px; text-align: center; font-weight: bold; font-size: 12px; }
     </style>
 </head>
 <body>
-    <div class="header">FILMY-AI PRO PORTAL</div>
-    <div class="search-box">
-        <input type="text" id="srch" onkeyup="doSearch()" placeholder="Search Movie...">
-    </div>
-    <div id="loader" style="padding: 20px; color: yellow;">Movies dhoond raha hoon...</div>
-    <div class="grid" id="grid"></div>
 
-    <script>
-        let db = [];
-        function doSearch() {
-            let q = document.getElementById('srch').value.toLowerCase();
-            let filtered = db.filter(m => m.title.toLowerCase().includes(q));
-            show(filtered.slice(0, 20));
+<div class="header">FILMY-AI PRO PORTAL</div>
+
+<div class="search-section">
+    <input type="text" id="mainSearch" onkeyup="searchNow()" placeholder="Search Movies (e.g. Pushpa, Hindi)...">
+</div>
+
+<div class="movie-grid" id="movieDisplay">
+    </div>
+
+<script>
+    let movieDB = [];
+
+    // Search function fix
+    function searchNow() {
+        let term = document.getElementById('mainSearch').value.toLowerCase();
+        let filtered = movieDB.filter(m => m.title.toLowerCase().includes(term));
+        displayMovies(filtered);
+    }
+
+    function displayMovies(list) {
+        const grid = document.getElementById('movieDisplay');
+        if(list.length === 0) {
+            grid.innerHTML = '<p style="grid-column: 1/-1;">No movies found. Try another name!</p>';
+            return;
         }
-        function show(list) {
-            document.getElementById('grid').innerHTML = list.map(m => `
-                <div class="card">
-                    <img src="${m.img}">
-                    <div style="padding:5px; font-size:11px;">${m.title}</div>
-                    <a href="${m.link}" class="dl-btn">DOWNLOAD</a>
+        grid.innerHTML = list.map(m => `
+            <div class="card">
+                <img src="${m.img}" alt="Poster">
+                <div class="card-body">
+                    <div class="m-title">${m.title}</div>
+                    <a href="${m.link}" class="dl-btn">DOWNLOAD NOW</a>
                 </div>
-            `).join('');
-        }
-        fetch('news.json').then(r => r.json()).then(data => {
-            db = data.news_items;
-            document.getElementById('loader').style.display = 'none';
-            show(db.slice(0, 40));
-        }).catch(() => {
-            document.getElementById('loader').innerHTML = "❌ Error: Robot ko refresh karein.";
+            </div>
+        `).join('');
+    }
+
+    // Robot data connection
+    fetch('news.json')
+        .then(res => res.json())
+        .then(data => {
+            movieDB = data.news_items;
+            displayMovies(movieDB);
+        })
+        .catch(err => {
+            document.getElementById('movieDisplay').innerHTML = '❌ Robot data connect nahi ho raha. Actions run karein!';
         });
-    </script>
+</script>
+
 </body>
 </html>
