--- a/index.html
+++ b/index.html
@@ -1,45 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filmy-AI Pro</title>
-    <style>
-        body { background: #0b0f16; color: white; font-family: sans-serif; margin: 0; text-align: center; }
-        .header { background: #e50914; padding: 20px; font-size: 24px; font-weight: bold; }
-        .search-area { padding: 20px; background: #141a24; }
-        input { width: 85%; padding: 15px; border-radius: 25px; border: none; background: #222; color: #fff; outline: 1px solid #444; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 15px; padding: 20px; }
-        .card { background: #1c2531; border-radius: 10px; overflow: hidden; border-bottom: 3px solid #e50914; }
-        .card img { width: 100%; height: 210px; object-fit: cover; }
-        .dl-btn { background: #e50914; color: white; text-decoration: none; display: block; padding: 10px; font-weight: bold; font-size: 12px; }
-    </style>
-</head>
-<body>
-    <div class="header">FILMY-AI PRO</div>
-    <div class="search-area"><input type="text" id="srch" onkeyup="s()" placeholder="Search Movies..."></div>
-    <div id="m" style="padding: 20px;">Robot data connect kar raha hai...</div>
-    <div class="grid" id="g"></div>
+<script>
+    function searchNow() {
+        let term = document.getElementById('mainSearch').value.toLowerCase();
+        let cards = document.getElementsByClassName('card');
+        for (let i = 0; i < cards.length; i++) {
+            let title = cards[i].innerText.toLowerCase();
+            cards[i].style.display = title.includes(term) ? "block" : "none";
+        }
+    }
 
-    <script>
-        let d = [];
-        function s() {
-            let q = document.getElementById('srch').value.toLowerCase();
-            show(d.filter(x => x.title.toLowerCase().includes(q)));
-        }
-        function show(l) {
-            document.getElementById('g').innerHTML = l.map(x => `
-                <div class="card"><img src="${x.img}"><div style="padding:10px;font-size:12px;">${x.title}</div>
-                <a href="${x.link}" target="_blank" class="dl-btn">DOWNLOAD</a></div>
+    fetch('news.json?v=' + Date.now())
+        .then(r => r.json())
+        .then(data => {
+            document.getElementById('movieDisplay').innerHTML = data.news_items.map(m => `
+                <div class="card" style="background:#1c2531; margin:10px; border-radius:10px; overflow:hidden;">
+                    <img src="${m.img}" style="width:100%; height:200px; object-fit:cover;">
+                    <div class="m-title" style="padding:10px; font-weight:bold;">${m.title}</div>
+                    <a href="${m.link}" target="_blank" style="background:#e50914; color:white; display:block; padding:10px; text-decoration:none;">DOWNLOAD</a>
+                </div>
             `).join('');
-        }
-        // Is line par dhyan dein: fetch ab error nahi dega
-        fetch('./news.json?v=' + Date.now()).then(r => r.json()).then(data => {
-            d = data.news_items;
-            document.getElementById('m').style.display = 'none';
-            show(d);
-        }).catch(e => {
-            document.getElementById('m').innerHTML = "❌ Robot abhi data likh raha hai. 30 seconds baad refresh karein.";
         });
-    </script>
-</body>
-</html>
+</script>
