--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
-<script>
-    function searchNow() {
-        let term = document.getElementById('mainSearch').value.toLowerCase();
-        let cards = document.getElementsByClassName('card');
-        for (let i = 0; i < cards.length; i++) {
-            let title = cards[i].innerText.toLowerCase();
-            cards[i].style.display = title.includes(term) ? "block" : "none";
-        }
-    }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FILMY-AI PRO PORTAL</title>
+    <style>
+        body { background: #0b0f16; color: white; font-family: sans-serif; margin: 0; text-align: center; }
+        .header { background: #e50914; padding: 20px; font-size: 24px; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.5); }
+        .search-box { padding: 20px; background: #141a24; position: sticky; top: 0; z-index: 100; }
+        input { width: 85%; padding: 12px; border-radius: 20px; border: none; background: #222; color: #fff; outline: 1px solid #444; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 15px; padding: 20px; }
+        .card { background: #1c2531; border-radius: 10px; overflow: hidden; border-bottom: 3px solid #e50914; transition: 0.3s; }
+        .card img { width: 100%; height: 210px; object-fit: cover; }
+        .m-title { padding: 10px; font-size: 12px; font-weight: bold; height: 35px; overflow: hidden; }
+        .dl-btn { background: #e50914; color: white; text-decoration: none; display: block; padding: 10px; font-weight: bold; }
+    </style>
+</head>
+<body>
+    <div class="header">FILMY-AI PRO</div>
+    <div class="search-box">
+        <input type="text" id="srch" onkeyup="filterMovies()" placeholder="Search Movies (e.g. Pushpa)...">
+    </div>
+    <div id="status" style="padding: 20px; color: yellow;">Connecting to Robot...</div>
+    <div class="grid" id="grid"></div>
 
-    fetch('news.json?v=' + Date.now())
-        .then(r => r.json())
-        .then(data => {
-            document.getElementById('movieDisplay').innerHTML = data.news_items.map(m => `
-                <div class="card" style="background:#1c2531; margin:10px; border-radius:10px; overflow:hidden;">
-                    <img src="${m.img}" style="width:100%; height:200px; object-fit:cover;">
-                    <div class="m-title" style="padding:10px; font-weight:bold;">${m.title}</div>
-                    <a href="${m.link}" target="_blank" style="background:#e50914; color:white; display:block; padding:10px; text-decoration:none;">DOWNLOAD</a>
-                </div>
-            `).join('');
-        });
-</script>
+    <script>
+        let db = [];
+        function filterMovies() {
+            let q = document.getElementById('srch').value.toLowerCase();
+            let cards = document.getElementsByClassName('card');
+            for (let i = 0; i < cards.length; i++) {
+                let title = cards[i].innerText.toLowerCase();
+                cards[i].style.display = title.includes(q) ? "block" : "none";
+            }
+        }
+
+        fetch('news.json?v=' + Date.now())
+            .then(r => r.json())
+            .then(data => {
+                db = data.news_items;
+                document.getElementById('status').style.display = 'none';
+                document.getElementById('grid').innerHTML = db.map(m => `
+                    <div class="card">
+                        <img src="${m.img}" onerror="this.src='https://via.placeholder.com/150x200?text=Poster'">
+                        <div class="m-title">${m.title}</div>
+                        <a href="${m.link}" target="_blank" class="dl-btn">DOWNLOAD NOW</a>
+                    </div>
+                `).join('');
+            }).catch(e => {
+                document.getElementById('status').innerHTML = "❌ Error: Robot ko news.json nahi mili.";
+            });
+    </script>
+</body>
+</html>
