--- a/index.html
+++ b/index.html
@@ -1,37 +1,61 @@
-<script>
-    let db = []; let p = 1; const sz = 20;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FILMY-AI.NET | Download Hub</title>
+    <style>
+        body { background: #001524; color: #fff; font-family: sans-serif; margin: 0; text-align: center; }
+        .header { background: linear-gradient(#ffcc00, #ff9900); color: #000; padding: 15px; font-weight: bold; font-size: 24px; }
+        .update-bar { background: red; padding: 5px; font-size: 12px; font-weight: bold; }
+        .search-area { padding: 15px; background: #002d4a; }
+        input { width: 90%; padding: 12px; border: 2px solid #ffcc00; border-radius: 5px; outline: none; }
+        .movie-item { display: flex; align-items: center; padding: 10px; border-bottom: 1px solid #003554; background: #001f33; text-decoration: none; color: #fff; text-align: left; }
+        .movie-item img { width: 60px; height: 80px; margin-right: 15px; border: 1px solid #ffcc00; }
+        .movie-name { font-size: 16px; color: #ffcc00; font-weight: bold; }
+        .dl-tag { background: #00ff00; color: #000; padding: 2px 6px; font-size: 10px; border-radius: 3px; font-weight: bold; margin-top: 5px; display: inline-block; }
+        .pg-btn { background: #ffcc00; color: #000; border: none; padding: 10px 20px; font-weight: bold; margin: 20px 5px; cursor: pointer; border-radius: 5px; }
+    </style>
+</head>
+<body>
+    <div class="header">FILMY-AI.NET</div>
+    <div class="update-bar">Latest: 10,000+ Movies Added! [HD Quality]</div>
+    <div class="search-area"><input type="text" id="srch" onkeyup="s()" placeholder="Search Movies Here..."></div>
+    
+    <div id="status" style="padding:20px;">Robot is Fetching Movies...</div>
+    <div id="grid"></div>
 
-    function render(list) {
-        const grid = document.getElementById('grid');
-        grid.innerHTML = list.map(m => `
-            <a href="download.html?id=${m.id}" class="movie-item">
-                <img src="${m.img}" onerror="this.src='https://via.placeholder.com/60x80?text=Poster'">
-                <div class="movie-info">
-                    <div class="movie-name">${m.title}</div>
-                    <span class="dl-tag">HD Rip</span> <span class="dl-tag" style="background:#00ff00">Free Download</span>
-                </div>
-            </a>
-        `).join('');
-    }
+    <div class="pagination">
+        <button class="pg-btn" onclick="cp(-1)">PREV</button>
+        <span id="pnum" style="font-weight:bold;">Page 1</span>
+        <button class="pg-btn" onclick="cp(1)">NEXT</button>
+    </div>
 
-    function s() {
-        let q = document.getElementById('srch').value.toLowerCase();
-        let filtered = db.filter(x => x.title.toLowerCase().includes(q));
-        render(filtered.slice(0, 20));
-    }
-
-    function cp(v) { 
-        p += v; if(p<1) p=1; 
-        document.getElementById('pnum').innerText = "Page " + p; 
-        render(db.slice((p-1)*sz, p*sz)); 
-        window.scrollTo(0,0); 
-    }
-
-    fetch('news.json?v=' + Date.now())
-        .then(r => r.json())
-        .then(data => {
+    <script>
+        let db = []; let p = 1; const sz = 20;
+        function render(list) {
+            const grid = document.getElementById('grid');
+            if(list.length === 0) { grid.innerHTML = "<p>No Movie Found!</p>"; return; }
+            grid.innerHTML = list.map(m => `
+                <a href="download.html?id=${m.id}" class="movie-item">
+                    <img src="${m.img}" onerror="this.src='https://via.placeholder.com/60x80?text=Movie'">
+                    <div>
+                        <div class="movie-name">${m.title}</div>
+                        <span class="dl-tag">HD RIP</span> <span class="dl-tag" style="background:#ffcc00">DOWNLOAD</span>
+                    </div>
+                </a>
+            `).join('');
+        }
+        function s() {
+            let q = document.getElementById('srch').value.toLowerCase();
+            render(db.filter(x => x.title.toLowerCase().includes(q)).slice(0, 20));
+        }
+        function cp(v) { p += v; if(p<1)p=1; document.getElementById('pnum').innerText = "Page "+p; render(db.slice((p-1)*sz, p*sz)); window.scrollTo(0,0); }
+        
+        fetch('news.json?v=' + Date.now()).then(r => r.json()).then(data => {
             db = data.news_items;
             document.getElementById('status').style.display = 'none';
             render(db.slice(0, sz));
         });
-</script>
+    </script>
+</body>
+</html>
